--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: 网球玩的人的学习笔记
 
 # Short bio or description (displayed in the header)
-description: Read more, practice more, think more, ask more
+description: 多读，多想，多练，多问
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
