--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: 网球玩的人的学习笔记
 description: 多读，多想，多练，多问
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars.githubusercontent.com/u/37606779?s=400&u=2fc2a7fc167a58590fc62663514252c6ae7301dd&v=4
 
 #
 # Flags below are optional
