--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: 网球玩的人的学习笔记
+name: 网球玩的人的学习笔记-my study notes
 
 # Short bio or description (displayed in the header)
-description: 多读，多想，多练，多问
+description: 多读，多想，多练，多问-Read more, think more, practice more, ask more
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars.githubusercontent.com/u/37606779?s=400&u=2fc2a7fc167a58590fc62663514252c6ae7301dd&v=4
