--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: 网球玩的人的学习笔记
+name: 网球玩的诗
 
 # Short bio or description (displayed in the header)
 description: 多读，多想，多练，多问
