--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email: wqw@dr.com
   facebook:
   flickr:
-  github: wqwdr/myblog
+  github: wqwdr
   instagram:
   linkedin:
   pinterest:
