--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: 网球玩的诗
 
 # Short bio or description (displayed in the header)
-description: 多读，多想，多练，多问。以及，成为一个开放的人。
+description: 多读，多想，多练，多问。以及，成为一个开放的人。  另，这些诗我觉得都不错，有空了可以读读。
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars.githubusercontent.com/u/37606779?s=400&u=2fc2a7fc167a58590fc62663514252c6ae7301dd&v=4
